--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,18 @@
-name: Debug OIDC Claims
-on:
-  push:
-    branches:
-      - main
-jobs:
-  debug_claims:
-    # 1. Ajoutez la permission obligatoire
-    permissions:
-      id-token: write
-      contents: read # Facultatif, mais souvent requis
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      # 2. Utilisez l'action de débogage
-      - name: Afficher les revendications OIDC
-        uses: actions/github-action-oidc-debugger@v1
-        with:
-          # Définissez l'audience (aud) que vous utiliserez dans votre configuration GCP.
-          # Si non spécifiée, l'audience par défaut de GitHub est utilisée.
-          audience: 'https://iam.googleapis.com/projects/793834297925/locations/global/workloadIdentityPools/my-pool/providers/github-actions-provider'
+name: 'oidc-debugger-action'
+description: 'Print decoded OIDC token claims generated through Github Actions.'
+inputs:
+  audience:
+    description: 'The audience to use when requesting the JWT. Your Github server URL and repository owner (e.g. https://github.com/github).'
+    required: true
+    default: '${{ github.server_url }}/${{ github.repository }}'
+runs:
+  using: "composite"
+  steps:
+    - name: Debug OIDC claims
+      shell: bash
+      env:
+        AUDIENCE: "${{ inputs.audience }}"
+      run: |
+        TOKEN_JSON=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=$AUDIENCE")
+        ID_TOKEN=$(echo "$TOKEN_JSON" | jq -r .value)
+        echo "$ID_TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null | jq -r
