--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,17 @@
-name: 'oidc-debugger-action'
-description: 'Print decoded OIDC token claims generated through Github Actions.'
-inputs:
-  audience:
-    description: 'The audience to use when requesting the JWT. Your Github server URL and repository owner (e.g. https://github.com/github).'
-    required: true
-    default: '${{ github.server_url }}/${{ github.repository }}'
-runs:
-  using: "composite"
-  steps:
-    - name: Debug OIDC claims
-      shell: bash
-      env:
-        AUDIENCE: "${{ inputs.audience }}"
-      run: |
-        TOKEN_JSON=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=$AUDIENCE")
-        ID_TOKEN=$(echo "$TOKEN_JSON" | jq -r .value)
-        echo "$ID_TOKEN" | awk -F. '{print $2}' | base64 -d 2>/dev/null | jq -r
+name: Test Debugger Action
+on: 
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  oidc_debug_test:
+    permissions:
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    name: A test of the oidc debugger
+    steps:
+      - name: Debug OIDC Claims
+        uses: github/actions-oidc-debugger@main
+        with:
+          audience: '${{ github.server_url }}/${{ github.repository_owner }}'
