--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,29 @@ jobs:
       contents: read # Facultatif, mais souvent requis
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Décoder manuellement le jeton OIDC
+        run: |
+          # 1. Définissez l'audience (elle n'a pas besoin d'être l'URL GCP pour le décodage, 
+          # mais il est bon de la définir correctement pour la démonstration)
+          AUDIENCE="https://iam.googleapis.com/projects/793834297925/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
 
-      # 2. Utilisation de l'action de remplacement
-      - name: Afficher les revendications OIDC (Debug communautaire)
-        uses: mike-engel/oidc-debugger@v1 
-        with:
-          # L'audience doit correspondre à votre fournisseur GCP.
-          # Par exemple : 'https://iam.googleapis.com/projects/1234567890/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
-          audience: 'https://iam.googleapis.com/projects/793834297925/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+
+          echo "Récupération du jeton OIDC de GitHub..."
+          
+          # 2. Récupération du JWT brut
+          ID_TOKEN=$(curl -s -X POST \
+            -H "Authorization: Bearer ${{ secrets.ACTIONS_ID_TOKEN_REQUEST_TOKEN }}" \
+            -H "Accept: application/json" \
+            "${{ secrets.ACTIONS_ID_TOKEN_REQUEST_URL }}&audience=${AUDIENCE}" | jq -r .value)
+
+          if [ -z "$ID_TOKEN" ]; then
+            echo "Erreur: Impossible de récupérer le jeton OIDC."
+            exit 1
+          fi
+
+          # 3. Décodage et affichage de la partie "claims" (le corps du JWT)
+          echo "JWT Claims décodées (Corps du jeton):"
+          
+          # La partie claims est la 2ème section du JWT (séparée par des points)
+          # Utilisation de base64 -d pour décoder, puis jq pour formater en JSON lisible
+          echo "$ID_TOKEN" | awk -F. '{print $2}' | base64 -d | jq .
