test du déploiement automatisé

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,9 @@ jobs:
           create_credentials_file: true
           workload_identity_provider: 'projects/793834297925/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
           service_account: 'github-actions@project-a7b5d84c-a964-4b71-9fc.iam.gserviceaccount.com'
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-cloud-functions@v4'
+        timeout-minutes: 3
+        with:
+          name: 'apicallgfu'
+          runtime: 'python312'
