test du déploiement automatisé 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           service_account: 'github-actions@project-a7b5d84c-a964-4b71-9fc.iam.gserviceaccount.com'
       - id: 'deploy'
         uses: 'google-github-actions/deploy-cloud-functions@v4'
+        #Test
         timeout-minutes: 3
         with:
           name: 'apicallgfu'
